fixed grid on mobile

--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ a:focus {
 }
 
 .card-videos-wrapper {
-    gap: 50px;
+    gap: 20px;
     padding: 50px 20px 100px 20px;
 }
 
@@ -743,7 +743,6 @@ a:focus {
 
 .hero-espetos-title {
     align-items: flex-start;
-    width: auto;
     gap: 10px;
 }
 
@@ -815,6 +814,10 @@ a:focus {
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+
+.highlight-on-page {
+    color: var(--amarelo);
 }
 
 
@@ -930,18 +933,21 @@ a:focus {
         align-items: center;
     }
 
-    .hero-espetos-title {
+    .hero-espetos {
         align-items: flex-start;
-        align-self: flex-start;
+        justify-content: flex-start;
+    }
+
+    .hero-espetos-title {
         gap: 10px;
-        margin-left: -60px;
+        padding-bottom: 40px;
     }
 
     .svg-espeto {
-        min-width: 300px;
+        max-width: 300px;
         padding-top: 20px;
         padding-bottom: 20px;
-        transform-origin: 48%;
+        transform-origin: 50%;
         transform: rotate(180deg);
     }
 
@@ -963,7 +969,7 @@ a:focus {
 
     .card-grid-simples {
         grid-template-columns: 1fr;
-        gap: 30px;
+        gap: 10px;
         padding-inline: 30px;
         grid-template-areas:
             "simples-com-garra"
@@ -978,7 +984,7 @@ a:focus {
     .card-grid-duplo {
         grid-template-columns: 1fr;
         padding-inline: 30px;
-        gap: 30px;
+        gap: 10px;
         grid-template-areas:
             "espeto-duplo-desmontado"
             "espeto-duplo-principal"
@@ -991,8 +997,32 @@ a:focus {
             "materiais";
     }
 
-    .hero-espetos-title {
-        padding-bottom: 40px;
+    .card-grid-triplo {
+        grid-template-columns: 1fr;
+        padding-inline: 30px;
+        gap: 10px;
+        grid-template-areas:
+            "triplo-desmontado"
+            "triplo-em-pe"
+            "triplo-principal"
+            "inoxaisi304"
+            "suporta"
+            "praticidade"
+            "regulavel"
+            "materiais";
     }
 
+    .card-grid-petiscos {
+        grid-template-columns: 1fr;
+        padding-inline: 20px;
+        gap: 10px;
+        grid-template-areas:
+            "petiscos-principal"
+            "petiscos-em-pe"
+            "inoxaisi304"
+            "suporta"
+            "praticidade"
+            "regulavel"
+            "materiais";
+    }
 }
